--- a/Cinnabar/Cinnabar.csproj
+++ b/Cinnabar/Cinnabar.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.17.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
     </ItemGroup>
 
